RESOLVED FIXED212595
[JSC] JSValue::toThis should not throw exception
https://bugs.webkit.org/show_bug.cgi?id=212595
Summary [JSC] JSValue::toThis should not throw exception
Yusuke Suzuki
Reported 2020-06-01 08:38:08 PDT
[JSC] JSValue::toThis should not throw exception
Attachments
Patch (4.45 KB, patch)
2020-06-01 08:40 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-06-01 08:40:47 PDT
Yusuke Suzuki
Comment 2 2020-06-01 08:41:20 PDT
Mark Lam
Comment 3 2020-06-01 09:01:02 PDT
Comment on attachment 400734 [details] Patch r=me
Yusuke Suzuki
Comment 4 2020-06-01 11:31:20 PDT
JSC failure exceptionFuzz.yaml/exceptionFuzz/earley-boyer.js.exception-fuzz is not related to this patch (this was happening before this patch), and it is tracked in different bugzilla.
EWS
Comment 5 2020-06-01 11:42:51 PDT
Committed r262388: <https://trac.webkit.org/changeset/262388> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400734 [details].
Yusuke Suzuki
Comment 6 2020-06-01 14:02:38 PDT
Note You need to log in before you can comment on or make changes to this bug.